--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.1.0",
+    "axios": "^0.24.0",
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-input-mask": "^2.0.4"
   },
   "devDependencies": {
     "@types/node": "16.11.7",
